Bug 1795070 - Speed up deleting from history by 7,000%. r=mak

Initial investigation revealed that when the user deletes 2,000 items from a history search, treeView.js invalidateContainer() is invoked 2,000 times (in batches of 300 at a time). However, this is not the primary cause of the poor performance.

Yes, one of the nsNavHistoryQueryResultNode observers is being refreshed for every Page_removed event, resulting in repeated calls to treeView.js invalidateContainer(). This definitely has a performance impact.

However, even worse is that another of the nsNavHistoryQueryResultNode observers is being incrementally updated for every Page_removed event. This is causing the majority of the slowdown.

This patch provides a simple solution: when handling a PlacesEvent containing 50 or more Page_removed events and no other events, just refresh all the history observers once and return.

With this change, it takes about 1 second to delete 2,000 items from a history query, representing a performance improvement of approximately 7,000%.

Differential Revision: https://phabricator.services.mozilla.com/D159286